# src/repository-webapi-abstractions/Interfaces/IPlayersApi.cs
@@ -12,6 +12,7 @@ namespace XtremeIdiots.Portal.RepositoryApi.Abstractions.Interfaces
         Task<ApiResponseDto> HeadPlayerByGameType(GameType gameType, string guid);
         Task<ApiResponseDto<PlayerDto>> GetPlayerByGameType(GameType gameType, string guid, PlayerEntityOptions playerEntityOptions);
         Task<ApiResponseDto<PlayersCollectionDto>> GetPlayers(GameType? gameType, PlayersFilter? filter, string? filterString, int skipEntries, int takeEntries, PlayersOrder? order, PlayerEntityOptions playerEntityOptions);
+        Task<ApiResponseDto<PlayersCollectionDto>> GetPlayersWithIpAddress(string ipAddress, int skipEntries, int takeEntries, PlayersOrder? order, PlayerEntityOptions playerEntityOptions);
 
         Task<ApiResponseDto> CreatePlayer(CreatePlayerDto createPlayerDto);
         Task<ApiResponseDto> CreatePlayers(List<CreatePlayerDto> createPlayerDtos);
